--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,26 +24,27 @@ jobs:
             target: x86_64-unknown-linux-gnu
             arch: x86_64
             artifact_suffix: tar.gz
-            package_command: |
-              tar -czvf blt-${{ matrix.os_name }}-${{ matrix.arch }}.${{ matrix.artifact_suffix }} blt-executable
           - os_name: macos
             os_runner: ubuntu-latest # Cross-compiling from Linux
             target: aarch64-apple-darwin
             arch: aarch64
             artifact_suffix: tar.gz
             use_zig: true # Flag to install Zig for cross-compilation
-            package_command: |
-              tar -czvf blt-${{ matrix.os_name }}-${{ matrix.arch }}.${{ matrix.artifact_suffix }} blt-executable
           - os_name: windows
             os_runner: windows-latest
             target: x86_64-pc-windows-msvc
             arch: x86_64
             artifact_suffix: zip
-            package_command: |
-              7z a blt-${{ matrix.os_name }}-${{ matrix.arch }}.${{ matrix.artifact_suffix }} blt-executable.exe
 
     steps:
       - uses: actions/checkout@v4
+
+      - name: Install Zig (for cross-compilation)
+        if: matrix.use_zig == true
+        run: |
+          wget https://ziglang.org/builds/zig-linux-x86_64-0.12.0-dev.1604+caae40c21.tar.xz
+          tar -xf zig-linux-x86_64-0.12.0-dev.1604+caae40c21.tar.xz
+          echo "$(pwd)/zig-linux-x86_64-0.12.0-dev.1604+caae40c21" >> $GITHUB_PATH
 
       - name: Set up Rust
         uses: actions-rs/toolchain@v1
@@ -53,18 +54,29 @@ jobs:
           override: true
           components: clippy, rustfmt
 
-      - name: Install Zig (for macOS cross-compilation)
-        if: matrix.use_zig == true
+      - name: Install build dependencies (Linux)
+        if: runner.os == 'Linux'
         run: |
           sudo apt-get update
           sudo apt-get install -y wget xz-utils
-          wget https://ziglang.org/download/0.11.0/zig-linux-x86_64-0.11.0.tar.xz
-          tar -xf zig-linux-x86_64-0.11.0.tar.xz
-          sudo mv zig-linux-x86_64-0.11.0 /usr/local/bin/zig
-          echo "CC_${{ matrix.target }}=/usr/local/bin/zig/zig cc -target ${{ matrix.target }}" >> $GITHUB_ENV
-          echo "CXX_${{ matrix.target }}=/usr/local/bin/zig/zig c++ -target ${{ matrix.target }}" >> $GITHUB_ENV
-          echo "AR_${{ matrix.target }}=/usr/local/bin/zig/zig ar" >> $GITHUB_ENV
-          echo "CARGO_TARGET_${{ matrix.target.toUppercase().replace('-', '_') }}_LINKER=/usr/local/bin/zig/zig cc -target ${{ matrix.target }}" >> $GITHUB_ENV
+
+      - name: Install Zig (for cross-compilation)
+        if: matrix.use_zig == true
+        run: |
+          wget https://ziglang.org/download/0.12.0/zig-linux-x86_64-0.12.0.tar.xz
+          tar -xf zig-linux-x86_64-0.12.0.tar.xz
+          echo "$(pwd)/zig-linux-x86_64-0.12.0" >> $GITHUB_PATH
+          echo "ZIG_PATH=$(pwd)/zig-linux-x86_64-0.12.0" >> $GITHUB_ENV
+
+      - name: Build
+        env:
+          CARGO_TARGET_AARCH64_APPLE_DARWIN_LINKER: ${{ env.ZIG_PATH }}/zig cc -target aarch64-macos-gnu
+        run: |
+          if [ "${{ matrix.use_zig }}" = "true" ]; then
+            cargo build --release --target ${{ matrix.target }}
+          else
+            cargo build --release --target ${{ matrix.target }}
+          fi
 
 
       - name: Cache Cargo dependencies
@@ -95,25 +107,30 @@ jobs:
       - name: Build release binary
         run: cargo build --release --target ${{ matrix.target }}
 
-      - name: Prepare release artifact
-        # This step runs only on tag pushes or pushes to main, for any matrix combination
-        if: startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/main'
-        shell: bash # Ensure bash for consistent scripting, especially for windows runner
+      - name: Package release
+        if: success() && (startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/main')
+        shell: bash
         run: |
-          mkdir -p ../artifacts # Create artifacts dir outside current checkout
-          ARTIFACT_DIR=$(pwd)/../artifacts
-          EXECUTABLE_NAME="blt-executable"
-          if [ "${{ matrix.os_name }}" == "windows" ]; then
-            cp target/${{ matrix.target }}/release/blt.exe $ARTIFACT_DIR/$EXECUTABLE_NAME.exe
+          # Create artifacts directory
+          mkdir -p artifacts
+          
+          # Copy the built binary to a consistent name for packaging
+          if [ "${{ matrix.os_name }}" = "windows" ]; then
+            cp target/${{ matrix.target }}/release/blt.exe artifacts/blt-executable.exe
+            # Package for Windows
+            cd artifacts
+            7z a blt-${{ matrix.os_name }}-${{ matrix.arch }}.zip blt-executable.exe
+            cd ..
           else
-            cp target/${{ matrix.target }}/release/blt $ARTIFACT_DIR/$EXECUTABLE_NAME
+            cp target/${{ matrix.target }}/release/blt artifacts/blt-executable
+            # Package for Linux/macOS
+            cd artifacts
+            tar -czvf blt-${{ matrix.os_name }}-${{ matrix.arch }}.tar.gz blt-executable
+            cd ..
           fi
-
-          cd $ARTIFACT_DIR
-          ${{ matrix.package_command }}
-          # Example: tar -czvf blt-linux-x86_64.tar.gz blt-executable
-          # Example: 7z a blt-windows-x86_64.zip blt-executable.exe
-          cd ..
+          
+          # Set output for artifact name
+          echo "artifact_name=blt-${{ matrix.os_name }}-${{ matrix.arch }}.${{ matrix.artifact_suffix }}" >> $GITHUB_OUTPUT
 
       - name: Upload build artifact
         if: startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/main'
