--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,59 @@ jobs:
       TARGET: x86_64-unknown-linux-gnu
       ARTIFACT_SUFFIX: tar.gz
       ARTIFACT_NAME: blt-linux-x86_64
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install build dependencies (Linux)
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y pkg-config libssl-dev
+
+      - name: Set up Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: ${{ env.TARGET }}
+          override: true
+          components: clippy, rustfmt
+
+      - name: Cache Cargo dependencies
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+
+      - name: Build
+        run: cargo build --release --target ${{ env.TARGET }}
+
+      - name: Run Clippy
+        run: cargo clippy --target ${{ env.TARGET }} --all-features -- -D warnings
+
+      - name: Run tests
+        run: cargo test --target ${{ env.TARGET }} --all-features
+
+      - name: Package release
+        if: success() && (startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/main')
+        shell: bash
+        run: |
+          mkdir -p artifacts
+          cp target/${{ env.TARGET }}/release/blt artifacts/blt-executable
+          cd artifacts
+          tar -czvf ${{ env.ARTIFACT_NAME }}.tar.gz blt-executable
+          cd ..
+          echo "artifact_name=${{ env.ARTIFACT_NAME }}.${{ env.ARTIFACT_SUFFIX }}" >> $GITHUB_OUTPUT
+
+      - name: Upload build artifact
+        if: startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/main'
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ env.ARTIFACT_NAME }}
+          path: artifacts/${{ env.ARTIFACT_NAME }}.${{ env.ARTIFACT_SUFFIX }}
 
   build_and_test_macos:
     name: Build & Test (macOS)
@@ -28,6 +81,54 @@ jobs:
       TARGET: aarch64-apple-darwin
       ARTIFACT_SUFFIX: tar.gz
       ARTIFACT_NAME: blt-macos-aarch64
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: ${{ env.TARGET }}
+          override: true
+          components: clippy, rustfmt
+
+      - name: Cache Cargo dependencies
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+
+      - name: Build
+        run: cargo build --release --target ${{ env.TARGET }}
+
+      - name: Run Clippy
+        run: cargo clippy --target ${{ env.TARGET }} --all-features -- -D warnings
+
+      - name: Run tests
+        run: cargo test --target ${{ env.TARGET }} --all-features
+
+      - name: Package release
+        if: success() && (startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/main')
+        shell: bash
+        run: |
+          mkdir -p artifacts
+          cp target/${{ env.TARGET }}/release/blt artifacts/blt-executable
+          cd artifacts
+          tar -czvf ${{ env.ARTIFACT_NAME }}.tar.gz blt-executable
+          cd ..
+          echo "artifact_name=${{ env.ARTIFACT_NAME }}.${{ env.ARTIFACT_SUFFIX }}" >> $GITHUB_OUTPUT
+
+      - name: Upload build artifact
+        if: startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/main'
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ env.ARTIFACT_NAME }}
+          path: artifacts/${{ env.ARTIFACT_NAME }}.${{ env.ARTIFACT_SUFFIX }}
 
   build_and_test_windows:
     name: Build & Test (Windows)
@@ -40,12 +141,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install Zig (for cross-compilation)
-        if: matrix.use_zig == true
-        run: |
-          wget https://ziglang.org/builds/zig-linux-x86_64-0.12.0-dev.1604+caae40c21.tar.xz
-          tar -xf zig-linux-x86_64-0.12.0-dev.1604+caae40c21.tar.xz
-          echo "$(pwd)/zig-linux-x86_64-0.12.0-dev.1604+caae40c21" >> $GITHUB_PATH
 
       - name: Set up Rust
         uses: actions-rs/toolchain@v1
