--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,18 @@ blt_core = { path = "blt_core" }
 clap = { version = "4.4.8", features = ["derive"] }
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] } # main needs tokio for #[tokio::main]
 num_cpus = "1.16" # Used by main.rs to determine default thread count
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 [dev-dependencies]
 # Dev dependencies for integration tests of the binary, if any.
 tempfile = "3.3" # If integration tests for the binary need it directly
 # Note: unit tests for blt_core go in blt_core/Cargo.toml dev-dependencies
+assert_cmd = "2.0"
+predicates = "3.1.0"
+criterion = { version = "0.5", features = ["async_tokio"] }
+rand = "0.8"
+
+[[bench]]
+name = "pipeline_benchmark"
+harness = false
