--- a/blt_core/Cargo.toml
+++ b/blt_core/Cargo.toml
@@ -8,6 +8,9 @@ edition = "2021"
 tokio = { version = "1", features = ["fs", "io-util", "sync", "macros", "rt", "io-std"] }
 num_cpus = "1.16"
 sysinfo = "0.30" # For system RAM detection
+tracing = "0.1"
+async-trait = "0.1"
+memmap2 = "0.9"
 
 [dev-dependencies]
 tempfile = "3.3" # For tests
