--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,33 +33,41 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
         include:
           - os: ubuntu-latest
+            target: x86_64-unknown-linux-gnu
             artifact_name: blt-linux-amd64
             asset_name: blt-linux-amd64.tar.gz
           - os: macos-latest
+            target: x86_64-apple-darwin
             artifact_name: blt-macos-amd64
             asset_name: blt-macos-amd64.tar.gz
+          - os: macos-latest
+            target: aarch64-apple-darwin
+            artifact_name: blt-macos-arm64
+            asset_name: blt-macos-arm64.tar.gz
           - os: windows-latest
+            target: x86_64-pc-windows-msvc
             artifact_name: blt-windows-amd64
             asset_name: blt-windows-amd64.zip
     steps:
       - uses: actions/checkout@v4
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
+        with:
+          targets: ${{ matrix.target }}
       - name: Build binary
-        run: cargo build --release --locked
+        run: cargo build --release --locked --target ${{ matrix.target }}
       - name: Package for release
         shell: bash
         run: |
           mkdir staging
           if [ "${{ runner.os }}" = "Windows" ]; then
-            cp target/release/blt.exe staging/
+            cp target/${{ matrix.target }}/release/blt.exe staging/
             cd staging
             7z a ../${{ matrix.asset_name }} .
           else
-            cp target/release/blt staging/
+            cp target/${{ matrix.target }}/release/blt staging/
             cd staging
             tar czf ../${{ matrix.asset_name }} .
           fi
