--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 members = [
     "blt_core",
+    "blt_python",
     # The main binary crate (this one) is implicitly a member
     # if it's the root package with a [workspace] section.
     # Or we can explicitly list it if we move it to its own subdir, e.g. "blt_cli"
@@ -9,7 +10,7 @@ resolver = "2" # Using version 2 resolver
 
 [package]
 name = "blt" # This is the binary crate
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021" # Match blt_core for consistency
 
 [dependencies]
