fix: Create virtual environment for Python bindings CI
- Add python -m venv test_env to create virtual environment
- Install maturin and pytest in the virtual environment
- Fixes maturin develop error about missing virtualenv
- Ensures clean Python environment for testing

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,9 @@ jobs:
       - name: Build and test Python bindings
         working-directory: blt_python
         run: |
+          python -m venv test_env
+          source test_env/bin/activate
+          pip install maturin pytest
           maturin develop
           python -m pytest tests/ -v
 
